@@ -12,6 +12,7 @@ plugins {
     alias(libs.plugins.composeCompiler)
     alias(libs.plugins.composeHotReload)
     alias(libs.plugins.kotlinSerialization)
+    id("com.google.osdetector") version "1.7.3"
 }
 
 kotlin {
@@ -83,6 +84,21 @@ kotlin {
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutines.swing)
+
+
+            val javafxPlatform = when (osdetector.classifier) {
+                "linux-x86_64" -> "linux"
+                "linux-aarch_64" -> "linux-aarch64"
+                "windows-x86_64" -> "win"
+                "osx-x86_64" -> "mac"
+                "osx-aarch_64" -> "mac-aarch64"
+                else -> throw IllegalStateException("Unknown OS: ${osdetector.classifier}")
+            }
+            implementation("org.openjfx:javafx-base:19:${javafxPlatform}")
+            implementation("org.openjfx:javafx-media:19:${javafxPlatform}")
+            implementation("org.openjfx:javafx-graphics:19:${javafxPlatform}")
+            implementation("org.openjfx:javafx-controls:19:${javafxPlatform}")
+            implementation("org.openjfx:javafx-swing:19:${javafxPlatform}")
         }
     }
 }
@@ -132,6 +148,13 @@ compose.desktop {
                 configurationFiles.from("proguard-config.pro")
             }
         }
+
+//        tasks.withType<JavaExec> {
+//            jvmArgs = listOf("--add-modules", "javafx.controls,javafx.fxml",
+//                "--add-opens", "javafx.graphics/javafx.scene=ALL-UNNAMED",
+//                "--add-opens", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+//                "--add-opens", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED")
+//        }
     }
 }
 composeCompiler {
